# PersonalTracker_BE

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
app/: main.py
app/auth/: dependencies.py  routes.py  schemas.py  utils.py
app/core/: config.py  database.py
app/habits/: __init__.py  routes.py  schemas.py
app/notes/: __init__.py  routes.py  schemas.py
app/tasks/: __init__.py  routes.py  schemas.py
